--- a/synthtranslatorapp/app/src/main/res/layout/activity_main.xml
+++ b/synthtranslatorapp/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,15 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+        <com.example.synthtranslator.WaveRecorderDrawer
+            android:id="@+id/waveCanvas"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/translatedText"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <Button
             android:id="@+id/startButton"
             android:layout_width="wrap_content"
