--- a/synthtranslatorapp/app/src/main/res/layout/activity_main.xml
+++ b/synthtranslatorapp/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,12 @@
         tools:context=".MainActivity">
 
         <fragment
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:name="com.example.synthtranslator.SynthTranslatorFragment" />
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/navigation" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
