--- a/synthtranslatorapp/app/src/main/res/layout/activity_main.xml
+++ b/synthtranslatorapp/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="start" />
+            android:layout_gravity="start"
+            app:menu="@menu/drawer_menu" />
     </androidx.drawerlayout.widget.DrawerLayout>
 
 </layout>
