--- a/synthtranslatorapp/app/src/main/res/menu/drawer_menu.xml
+++ b/synthtranslatorapp/app/src/main/res/menu/drawer_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_settings"
+        android:id="@+id/settingsFragment"
         android:icon="@android:drawable/ic_menu_preferences"
         android:title="Settings" />
 </menu>
