--- a/synthtranslatorapp/app/src/main/res/layout/activity_main.xml
+++ b/synthtranslatorapp/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,16 @@
             android:layout_height="match_parent"
             tools:context=".MainActivity">
 
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/BottomNav"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#1B7FE3"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:menu="@menu/drawer_menu" />
+
             <fragment
                 android:id="@+id/nav_host_fragment"
                 android:name="androidx.navigation.fragment.NavHostFragment"
@@ -21,6 +31,18 @@
                 android:layout_height="match_parent"
                 app:defaultNavHost="true"
                 app:navGraph="@navigation/navigation" />
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fragmentContainerView"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="372dp"
+                android:layout_height="6dp"
+                app:defaultNavHost="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/nav_host_fragment"
+                app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment"
+                app:navGraph="@navigation/bottomnav" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         
