--- a/synthtranslatorapp/app/src/main/res/menu/bottomnav.xml
+++ b/synthtranslatorapp/app/src/main/res/menu/bottomnav.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
-        android:id="@+id/settingsFragment"
-        android:icon="@android:drawable/ic_menu_preferences"
+        android:id="@+id/settingsFragment2"
+        android:icon="@drawable/ic_settings"
         android:title="Settings" />
     <item
         android:id="@+id/oneTextFragment"
         android:icon="@drawable/ic_text"
         android:title="Text" />
     <item
-        android:id="@+id/synthTranslatorFragment"
+        android:id="@+id/synthTranslatorFragment2"
         android:icon="@drawable/ic_home"
         android:title="Home" />
     <item
