--- a/synthtranslatorapp/app/src/main/res/layout/fragment_settings.xml
+++ b/synthtranslatorapp/app/src/main/res/layout/fragment_settings.xml
@@ -23,6 +23,20 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/decibels_fact_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/decibelsFact"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/decibels_textview"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
             android:id="@+id/decibels_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -40,15 +54,15 @@
             android:id="@+id/seekBar"
             android:layout_width="0dp"
             android:layout_height="30dp"
-            android:max="98"
-            android:progress="70"
+            android:max="110"
+            android:progress="74"
             android:progressDrawable="@drawable/seekbar_style"
             android:thumb="@drawable/custom_thumb"
             android:paddingBottom="12dp"
             android:paddingTop="12dp"
             android:layout_marginStart="26dp"
             android:layout_marginEnd="26dp"
-            android:layout_marginBottom="47dp"
+            android:layout_marginBottom="36dp"
             app:layout_constraintBottom_toTopOf="@+id/resetButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
