--- a/synthtranslatorapp/app/src/main/res/layout/fragment_settings.xml
+++ b/synthtranslatorapp/app/src/main/res/layout/fragment_settings.xml
@@ -22,6 +22,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageView
+            android:id="@+id/decibels_fact_imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/decibels_fact_textview"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/mosmetro" />
+
         <TextView
             android:id="@+id/decibels_fact_textview"
             android:layout_width="wrap_content"
