--- a/synthtranslatorapp/app/src/main/res/layout/activity_main.xml
+++ b/synthtranslatorapp/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:menu="@menu/drawer_menu" />
+                app:menu="@menu/bottomnav" />
 
             <fragment
                 android:id="@+id/nav_host_fragment"
@@ -31,18 +31,6 @@
                 android:layout_height="match_parent"
                 app:defaultNavHost="true"
                 app:navGraph="@navigation/navigation" />
-
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fragmentContainerView"
-                android:name="androidx.navigation.fragment.NavHostFragment"
-                android:layout_width="372dp"
-                android:layout_height="6dp"
-                app:defaultNavHost="true"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/nav_host_fragment"
-                app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment"
-                app:navGraph="@navigation/bottomnav" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         
